fixed picture link extra padding at medium breakpoint

--- a/mysite/assets/scss/base/layout/_containers.scss
+++ b/mysite/assets/scss/base/layout/_containers.scss
@@ -105,6 +105,7 @@
 	height: 100%;
 	& > .columns {
 		padding: $mobile-padding;
+		padding-bottom: 0px;
 		&:first-child {
 			padding-top: 0px;
 		}
@@ -118,10 +119,6 @@
 		& > .columns {
 			padding-left: 0px;
 			padding-right: 0px;
-
-			&:first-child {
-				padding-top: 10px;
-			}
 
 			@include breakpoint(large) {
 				padding: 10px;
@@ -141,10 +138,6 @@
 		& > .columns {
 			padding-left: 0px;
 			padding-right: 0px;
-
-			&:first-child {
-				padding-top: 10px;
-			}
 
 			@include breakpoint(large) {
 				padding: 10px;
