--- a/mysite/assets/scss/components/_picture-link.scss
+++ b/mysite/assets/scss/components/_picture-link.scss
@@ -14,7 +14,7 @@
     height: $size;
     background-size: cover;
     background-position: 50% 50%;
-    margin-top: 4px;
+    margin-top: 3px;
 
     &__text {
       width: 10px;
